refactor(home): 顶部品牌区白色文本统一为CSS变量（零视觉回归）

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -711,7 +711,7 @@
         <!-- AISTONE 详细介绍部分 -->
         <section class="aistone-intro" style="background: #1a1f2e; padding: 40px 0; margin: 20px 0;">
             <div class="container">
-                <div style="text-align: center; color: white; max-width: 800px; margin: 0 auto;">
+                <div style="text-align: center; color: var(--color-surface-on-light-white, #fff); max-width: 800px; margin: 0 auto;">
                     <h2 style="font-size: 2.5em; margin-bottom: 20px; font-weight: bold;" data-i18n="welcomeToAistone">Welcome to AISTONE</h2>
                     <p style="font-size: 1.2em; line-height: 1.8; margin-bottom: 20px;" data-i18n="aistoneIntro">
                         <strong>AISTONE</strong> is your premier destination for AI-powered image generation and voice synthesis. As a leading AI content creation platform, <strong>AISTONE</strong> combines cutting-edge technology with user-friendly design to deliver exceptional results.
@@ -846,7 +846,7 @@
         <!-- AISTONE 品牌介绍 -->
         <section class="aistone-brand" style="background: #1a1f2e; padding: 60px 0; margin: 40px 0;">
             <div class="container">
-                <div style="text-align: center; color: white; max-width: 1000px; margin: 0 auto;">
+                <div style="text-align: center; color: var(--color-surface-on-light-white, #fff); max-width: 1000px; margin: 0 auto;">
                     <h2 style="font-size: 3em; margin-bottom: 30px; font-weight: bold; background: linear-gradient(45deg, var(--color-brand-primary, #00CFFF), var(--color-brand-secondary, #667eea)); -webkit-background-clip: text; -webkit-text-fill-color: transparent;" data-i18n="aboutAistone">About AISTONE</h2>
                     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-top: 40px;">
                         <div style="background: #262b35; padding: 30px; border-radius: 15px; border-left: 4px solid var(--color-brand-primary, #00CFFF);">
