--- a/frontend/auth-modals.html
+++ b/frontend/auth-modals.html
@@ -167,7 +167,7 @@
 }
 
 .modal-content {
-    background-color: #fff;
+    background-color: var(--color-surface-on-light-white, #fff);
     margin: 5% auto;
     padding: 0;
     border-radius: 12px;
@@ -193,7 +193,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 24px;
-    border-bottom: 1px solid #e5e7eb;
+    border-bottom: 1px solid var(--color-text-verylight, #e5e7eb);
 }
 
 .modal-header h2 {
@@ -240,7 +240,7 @@
 
 .form-group input {
     padding: 12px 16px;
-    border: 2px solid #e5e7eb;
+    border: 2px solid var(--color-text-verylight, #e5e7eb);
     border-radius: 8px;
     font-size: 1rem;
     transition: border-color 0.2s, box-shadow 0.2s;
@@ -248,15 +248,15 @@
 
 .form-group input:focus {
     outline: none;
-    border-color: #4f46e5;
+    border-color: var(--color-cta-primary, #4f46e5);
     box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
 }
 
 .form-group button {
     width: 100%;
     padding: 12px 16px;
-    background-color: #4f46e5;
-    color: white;
+    background-color: var(--color-cta-primary, #4f46e5);
+    color: var(--color-surface-on-light-white, #fff);
     border: none;
     border-radius: 8px;
     font-size: 1rem;
@@ -266,7 +266,7 @@
 }
 
 .form-group button:hover {
-    background-color: #4338ca;
+    background-color: var(--color-cta-primary-dark, #4338ca);
 }
 
 .form-footer {
@@ -275,7 +275,7 @@
 }
 
 .form-footer a {
-    color: #4f46e5;
+    color: var(--color-cta-primary, #4f46e5);
     text-decoration: none;
     font-weight: 500;
 }
@@ -339,23 +339,23 @@
 }
 
 .btn-primary {
-    background-color: #4f46e5;
-    color: white;
+    background-color: var(--color-cta-primary, #4f46e5);
+    color: var(--color-surface-on-light-white, #fff);
 }
 
 .btn-primary:hover {
-    background-color: #4338ca;
+    background-color: var(--color-cta-primary-dark, #4338ca);
 }
 
 .btn-outline {
     background-color: transparent;
-    color: #4f46e5;
-    border: 1px solid #4f46e5;
+    color: var(--color-cta-primary, #4f46e5);
+    border: 1px solid var(--color-cta-primary, #4f46e5);
 }
 
 .btn-outline:hover {
-    background-color: #4f46e5;
-    color: white;
+    background-color: var(--color-cta-primary, #4f46e5);
+    color: var(--color-surface-on-light-white, #fff);
 }
 
 .btn-small {
@@ -370,7 +370,7 @@
     right: 20px;
     padding: 12px 20px;
     border-radius: 8px;
-    color: white;
+    color: var(--color-surface-on-light-white, #fff);
     font-weight: 500;
     z-index: 1001;
     animation: messageSlideIn 0.3s ease-out;
@@ -416,7 +416,7 @@
     content: '';
     flex: 1;
     height: 1px;
-    background: #e5e7eb;
+    background: var(--color-text-verylight, #e5e7eb);
 }
 
 .divider span {
@@ -428,9 +428,9 @@
 .btn-google {
     width: 100%;
     padding: 12px 16px;
-    background-color: #fff;
-    color: #333;
-    border: 2px solid #e5e7eb;
+    background-color: var(--color-surface-on-light-white, #fff);
+    color: var(--color-text-on-light-strong, #333);
+    border: 2px solid var(--color-text-verylight, #e5e7eb);
     border-radius: 8px;
     font-size: 1rem;
     font-weight: 500;
@@ -443,7 +443,7 @@
 }
 
 .btn-google:hover {
-    border-color: #d1d5db;
+    border-color: var(--color-border-verylight-2, #d1d5db);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
