--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -350,6 +350,7 @@
     <!-- 按依赖顺序加载脚本 -->
     <script src="js/i18n.js?v=20250909"></script>
     <script src="js/api_client.js?v=20250909" defer></script>
+    <script src="js/modules/ui_utils.js?v=20250909" defer></script>
     <script src="js/modules/image_display.js?v=20250909" defer></script>
     <script src="js/ui_handler.js?v=20250909" defer></script>
     <script src="js/ui_enhancements.js?v=20250909" defer></script>
@@ -487,23 +488,23 @@
     }
 
     .btn-primary {
-        background-color: #4f46e5;
-        color: white;
+        background-color: var(--color-cta-primary, #4f46e5);
+        color: var(--color-surface-on-light-white, #fff);
     }
 
     .btn-primary:hover {
-        background-color: #4338ca;
+        background-color: var(--color-cta-primary-dark, #4338ca);
     }
 
     .btn-outline {
         background-color: transparent;
-        color: #4f46e5;
-        border: 1px solid #4f46e5;
+        color: var(--color-cta-primary, #4f46e5);
+        border: 1px solid var(--color-cta-primary, #4f46e5);
     }
 
     .btn-outline:hover {
-        background-color: #4f46e5;
-        color: white;
+        background-color: var(--color-cta-primary, #4f46e5);
+        color: var(--color-surface-on-light-white, #fff);
     }
 
     .btn-small {
