--- a/frontend/index.html
+++ b/frontend/index.html
@@ -921,6 +921,7 @@
     <!-- 按依赖顺序加载脚本 -->
     <script src="js/i18n.js?v=20250909"></script>
     <script src="js/api_client.js?v=20250909" defer></script>
+    <script src="js/modules/ui_utils.js?v=20250909" defer></script>
     <script src="js/modules/image_display.js?v=20250909" defer></script>
     <script src="js/ui_handler.js?v=20250909" defer></script>
     <script src="js/ui_enhancements.js?v=20250909" defer></script>
