--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -450,6 +450,7 @@
     <!-- 语音模块常量（需在 voice_app.js 之前加载） -->
     <script src="js/modules/voice_constants.js?v=20250909" defer></script>
     <!-- 语音波形渲染模块（在 voice_app.js 之前加载） -->
+    <script src="js/modules/ui_utils.js?v=20250909" defer></script>
     <script src="js/modules/voice_waveform.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250909" defer></script>
 
