feat(voice): add VoiceHistory module and integrate with voice_app; wire script in voice.html; keep localStorage fallback and zero visual regression

--- a/frontend/auth/google/callback.html
+++ b/frontend/auth/google/callback.html
@@ -18,7 +18,7 @@
         .loading {
             text-align: center;
             padding: 2rem;
-            background: white;
+            background: var(--color-surface-on-light-white, #fff);
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
