--- a/frontend/hd-images-ui.html
+++ b/frontend/hd-images-ui.html
@@ -70,7 +70,7 @@
 <style>
 /* 高清图片管理样式 */
 .hd-images-section {
-    background: #fff;
+    background: var(--color-surface-on-light-white, #fff);
     border-radius: 12px;
     padding: 24px;
     margin: 20px 0;
@@ -128,7 +128,7 @@
 /* 保存状态样式 */
 .saving-status {
     background: #3b82f6;
-    color: white;
+    color: var(--color-surface-on-light-white, #fff);
     padding: 12px 16px;
     border-radius: 8px;
     text-align: center;
@@ -279,7 +279,7 @@
 
 .btn-primary {
     background-color: #3b82f6;
-    color: white;
+    color: var(--color-surface-on-light-white, #fff);
 }
 
 .btn-primary:hover {
@@ -294,12 +294,12 @@
 
 .btn-outline:hover {
     background-color: #3b82f6;
-    color: white;
+    color: var(--color-surface-on-light-white, #fff);
 }
 
 .btn-danger {
     background-color: #ef4444;
-    color: white;
+    color: var(--color-surface-on-light-white, #fff);
 }
 
 .btn-danger:hover {
@@ -329,7 +329,7 @@
 }
 
 .image-modal-content {
-    background-color: #fff;
+    background-color: var(--color-surface-on-light-white, #fff);
     margin: 2% auto;
     padding: 0;
     border-radius: 12px;
@@ -445,7 +445,7 @@
 }
 
 .loading-content {
-    background: white;
+    background: var(--color-surface-on-light-white, #fff);
     padding: 32px;
     border-radius: 12px;
     text-align: center;
