--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -452,6 +452,7 @@
     <!-- 语音波形渲染模块（在 voice_app.js 之前加载） -->
     <script src="js/modules/ui_utils.js?v=20250909" defer></script>
     <script src="js/modules/voice_waveform.js?v=20250909" defer></script>
+    <script src="js/modules/voice_history.js?v=20250909" defer></script>
     <script src="js/voice_app.js?v=20250909" defer></script>
 
     <!-- 认证模态交互脚本 -->
