feat(voice): add VoiceResultRenderer and VoiceUrlParams modules; integrate into VoiceApp; wire scripts; update plan

--- a/frontend/voice.html
+++ b/frontend/voice.html
@@ -456,6 +456,8 @@
     <script src="js/modules/voice_logger.js?v=20250909" defer></script>
     <script src="js/modules/voice_examples.js?v=20250909" defer></script>
     <script src="js/modules/voice_text_tools.js?v=20250909" defer></script>
+    <script src="js/modules/voice_result_renderer.js?v=20250909" defer></script>
+    <script src="js/modules/voice_url_params.js?v=20250909" defer></script>
     <script src="js/modules/voice_download.js?v=20250909" defer></script>
     <script src="js/modules/voice_share.js?v=20250909" defer></script>
     <script src="js/modules/voice_history.js?v=20250909" defer></script>
