--- a/frontend/privacy.html
+++ b/frontend/privacy.html
@@ -215,14 +215,14 @@
     
     footer {
         background: #333;
-        color: white;
+        color: var(--color-surface-on-light-white, #fff);
         text-align: center;
         padding: 20px 0;
         margin-top: 50px;
     }
     
     .footer-links a {
-        color: white;
+        color: var(--color-surface-on-light-white, #fff);
         text-decoration: none;
         margin: 0 15px;
     }
