--- a/frontend/user.html
+++ b/frontend/user.html
@@ -64,21 +64,21 @@
     })();
   </script>
   <style>
-    body { background: #0b1220; color: #e5e7eb; }
+    body { background: var(--color-avatar-bg, #0b1220); color: var(--color-text-verylight, #e5e7eb); }
     .container { max-width: 1100px; margin: 20px auto; padding: 24px 28px; }
     .page-header { display:flex; align-items:center; justify-content:space-between; margin: 8px 0 18px; }
     .back-link { color: var(--color-brand-primary, #00CFFF); text-decoration:none; }
-    .card { background:#0f172a; border:1px solid #273548; border-radius:var(--radius-md); padding:18px; }
+    .card { background:#0f172a; border:1px solid var(--color-accent-border-strong, #273548); border-radius:var(--radius-md); padding:18px; }
     /* 复用首页用户信息与下拉样式 */
-    .user-info { display:flex; align-items:center; gap:10px; padding:6px 10px; background:rgba(15,23,42,0.7); border:1px solid #273548; border-radius:999px; }
+    .user-info { display:flex; align-items:center; gap:10px; padding:6px 10px; background:rgba(15,23,42,0.7); border:1px solid var(--color-accent-border-strong, #273548); border-radius:999px; }
     .user-avatar img { width:28px; height:28px; border-radius:50%; object-fit:cover; }
     .user-details { display:flex; flex-direction:row; align-items:center; gap:10px; position:relative; }
-    .username { font-weight:600; color:#e5e7eb; font-size:0.9rem; }
-    .user-menu-toggle { background:rgba(36,49,77,0.6); color:#e5e7eb; border:1px solid var(--color-accent-border, #2A3A57); border-radius:999px; padding:6px 12px 6px 6px; display:inline-flex; align-items:center; gap:6px; cursor:pointer; font-size:0.85rem; box-shadow:0 4px 18px rgba(0,0,0,0.25); appearance:none; -webkit-appearance:none; outline:none; background-clip:padding-box; }
+    .username { font-weight:600; color:var(--color-text-verylight, #e5e7eb); font-size:0.9rem; }
+    .user-menu-toggle { background:rgba(36,49,77,0.6); color:var(--color-text-verylight, #e5e7eb); border:1px solid var(--color-accent-border, #2A3A57); border-radius:999px; padding:6px 12px 6px 6px; display:inline-flex; align-items:center; gap:6px; cursor:pointer; font-size:0.85rem; box-shadow:0 4px 18px rgba(0,0,0,0.25); appearance:none; -webkit-appearance:none; outline:none; background-clip:padding-box; }
     .user-menu-toggle:hover { background:rgba(36,49,77,0.85); }
     .user-menu-toggle .caret { color:var(--color-text-primary, #aab4d4); font-size:0.8rem; }
-    .user-menu-toggle .avatar-inline { width:22px; height:22px; border-radius:50%; background:#0b1220; }
-    .user-menu-toggle .username { display:inline-block; color:#e5e7eb; max-width:160px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+    .user-menu-toggle .avatar-inline { width:22px; height:22px; border-radius:50%; background:var(--color-avatar-bg, #0b1220); }
+    .user-menu-toggle .username { display:inline-block; color:var(--color-text-verylight, #e5e7eb); max-width:160px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .user-dropdown { position:absolute; right:0; top:calc(100% + 8px); background:var(--color-wave-bg, #0e1424); border:1px solid var(--color-accent-border, #2A3A57); border-radius:10px; min-width:160px; box-shadow:0 14px 32px rgba(0,0,0,0.45); padding:8px; z-index:1000; }
     .dropdown-item { display:block; padding:8px 10px; color:var(--color-text-muted-2, #d6def8); text-decoration:none; border-radius:var(--radius-sm); font-size:0.9rem; white-space:nowrap; }
     .dropdown-item:hover { background: var(--color-accent-dark, #1a2440); }
@@ -152,17 +152,17 @@
           <div id="account-greeting" style="margin-bottom:10px;"></div>
           <div style="display:grid;grid-template-columns:120px 1fr;gap:8px 12px;align-items:center;">
             <label data-i18n="userUsername">用户名</label>
-            <input id="profile-username" type="text" style="padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;" />
+            <input id="profile-username" type="text" style="padding:8px;border-radius:8px;border:1px solid var(--color-accent-border-strong, #273548);background:#0f172a;color:var(--color-text-verylight, #e5e7eb);" />
             <label data-i18n="userEmail">邮箱</label>
-            <input id="profile-email" type="email" disabled style="padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#94a3b8;" />
+            <input id="profile-email" type="email" disabled style="padding:8px;border-radius:8px;border:1px solid var(--color-accent-border-strong, #273548);background:#0f172a;color:#94a3b8;" />
           </div>
           <button id="btn-update-profile" class="btn btn-primary" style="margin-top:12px;" data-i18n="userUpdateProfile">更新资料</button>
         </div>
-        <hr style="border-color:#273548;margin:16px 0;" />
+        <hr style="border-color:var(--color-accent-border-strong, #273548);margin:16px 0;" />
         <div id="change-password">
           <h3 style="margin:0 0 10px 0;" data-i18n="userChangePasswordTitle">修改密码</h3>
-          <input id="new-password" type="password" placeholder="新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;margin-bottom:8px;"/>
-          <input id="confirm-password" type="password" placeholder="确认新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid #273548;background:#0f172a;color:#e5e7eb;"/>
+          <input id="new-password" type="password" placeholder="新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid var(--color-accent-border-strong, #273548);background:#0f172a;color:var(--color-text-verylight, #e5e7eb);margin-bottom:8px;"/>
+          <input id="confirm-password" type="password" placeholder="确认新密码" style="width:100%;padding:8px;border-radius:8px;border:1px solid var(--color-accent-border-strong, #273548);background:#0f172a;color:var(--color-text-verylight, #e5e7eb);"/>
           <button id="btn-save-password" class="btn btn-outline" style="margin-top:12px;" data-i18n="userSave">保存</button>
         </div>
       </section>
