--- a/frontend/image-generator.html
+++ b/frontend/image-generator.html
@@ -66,7 +66,7 @@
     <meta name="revisit-after" content="3 days">
     <meta name="distribution" content="global">
     <meta name="rating" content="general">
-    <meta name="theme-color" content="#4F46E5">
+    <meta name="theme-color" content="var(--color-cta-primary, #4f46e5)">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://aistone.org/image-generator.html">
@@ -410,19 +410,19 @@
         gap: 10px;
         padding: 6px 10px;
         background: rgba(15,23,42,0.7);
-        border: 1px solid #273548;
+        border: 1px solid var(--color-accent-border-strong, #273548);
         border-radius: 999px;
     }
     .user-avatar { display: none; }
     .user-avatar img { width: 28px; height: 28px; border-radius: 50%; object-fit: cover; }
     .user-details { display: flex; flex-direction: row; align-items: center; gap: 10px; position: relative; }
-    .username { font-weight: 600; color: #e5e7eb; font-size: 0.9rem; }
+    .username { font-weight: 600; color: var(--color-text-verylight, #e5e7eb); font-size: 0.9rem; }
     .user-actions { display: none; }
 
     .user-menu-toggle {
         background: rgba(36, 49, 77, 0.6);
-        color: #e5e7eb;
-        border: 1px solid #2A3A57;
+        color: var(--color-text-verylight, #e5e7eb);
+        border: 1px solid var(--color-accent-border, #2A3A57);
         border-radius: 999px;
         padding: 6px 12px 6px 6px;
         display: inline-flex;
@@ -438,13 +438,13 @@
     }
     .user-menu-toggle:hover { background: rgba(36, 49, 77, 0.85); }
     .user-menu-toggle .caret { color: #aab4d4; font-size: 0.8rem; }
-    .user-menu-toggle .avatar-inline { width: 22px; height: 22px; border-radius: 50%; background:#0b1220; }
+    .user-menu-toggle .avatar-inline { width: 22px; height: 22px; border-radius: 50%; background:var(--color-avatar-bg, #0b1220); }
     .user-dropdown {
         position: absolute;
         right: 0;
         top: calc(100% + 8px);
-        background: #0e1424;
-        border: 1px solid #2A3A57;
+        background: var(--color-wave-bg, #0e1424);
+        border: 1px solid var(--color-accent-border, #2A3A57);
         border-radius: 10px;
         min-width: 160px;
         box-shadow: 0 14px 32px rgba(0,0,0,0.45);
@@ -463,9 +463,9 @@
     .dropdown-item:hover { background: #1a2440; }
 
     .lang-select {
-        background: #0e1424;
+        background: var(--color-wave-bg, #0e1424);
         color: #d6def8;
-        border: 1px solid #2A3A57;
+        border: 1px solid var(--color-accent-border, #2A3A57);
         border-radius: 999px;
         padding: 6px 28px 6px 12px;
         appearance: none;
