--- a/frontend/services.html
+++ b/frontend/services.html
@@ -59,25 +59,25 @@
             <section class="related-content" style="margin-top: 40px; padding: 20px; background: var(--color-surface-muted, #f8f9fa); border-radius: 8px;">
                 <h2 style="color: #333; margin-bottom: 20px;" data-i18n="relatedContentTitle">🚀 立即体验</h2>
                 <div class="related-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 15px;">
-                    <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
+                    <div class="related-item" style="background: var(--color-surface-on-light-white, #fff); padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="/" style="text-decoration: none; color: inherit;" data-i18n="relatedImageGenTitle">🎨 AI图片生成</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="relatedImageGenDesc">体验我们的核心服务，将想法转化为精美图像</p>
                     </div>
-                    <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
+                    <div class="related-item" style="background: var(--color-surface-on-light-white, #fff); padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="voice.html" style="text-decoration: none; color: inherit;" data-i18n="relatedVoiceGenTitle">🎵 AI语音合成</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="relatedVoiceGenDesc">将文字转换为自然语音，完全免费使用</p>
                     </div>
-                    <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
+                    <div class="related-item" style="background: var(--color-surface-on-light-white, #fff); padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="tutorial.html" style="text-decoration: none; color: inherit;" data-i18n="relatedTutorialTitle">📖 快速上手</a>
                         </h3>
                         <p style="margin: 0; font-size: 14px; color: #666;" data-i18n="relatedTutorialDesc">学习如何使用各项功能，获得最佳体验</p>
                     </div>
-                    <div class="related-item" style="background: white; padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
+                    <div class="related-item" style="background: var(--color-surface-on-light-white, #fff); padding: 15px; border-radius: 6px; border: 1px solid var(--color-border-muted, #e9ecef);">
                         <h3 style="font-size: 16px; margin: 0 0 8px 0; color: var(--color-link-primary, #007bff);">
                             <a href="about.html" style="text-decoration: none; color: inherit;" data-i18n="relatedAboutTitle">ℹ️ 了解技术</a>
                         </h3>
